--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-fade": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.525.0",
         "react-hook-form": "^7.60.0",
